@@ -35,8 +35,7 @@ class HelmCustomServiceAccountCreateMissingPermissionsIT extends AbstractHelmCus
                 K8sUtil.waitForHiveMQPlatformState(client, platformNamespace, PLATFORM_RELEASE_NAME, "ERROR");
         //noinspection unchecked
         assertThat((Map<String, String>) hivemqCustomResource.getAdditionalProperties().get("status")).containsValues(
-                String.format(
-                        "The ServiceAccount and its permissions are invalid: Found no ClusterRoleBinding for ServiceAccount '%s'",
+                "The ServiceAccount and its permissions are invalid: Found no ClusterRoleBinding for ServiceAccount '%s'".formatted(
                         SERVICE_ACCOUNT_NAME),
                 "INVALID_SERVICEACCOUNT_PERMISSION");
 
